fix bottom of footer have a white space

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -241,8 +241,7 @@ footer p {
 
 footer {
   height: 120px;
-  padding-top: 30px;
-  padding-bottom: 20px;
+  padding-top: 20px;
   background-color: #2980b9;
 }
 
